# watchr

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: ci.yml
docs/adr/: 0001-file-watching-debounce.md  0002-config-toml.md
src/: cli.rs  config.rs  entry.rs  init.rs  main.rs  resolver.rs  watcher.rs
