[package]
name = "watchr"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
notify-debouncer-full = "0.7.0"
clap = { version = "4.6.0", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.2"
thiserror = "2.0.18"
tempfile = "3.27.0"
ctrlc = "3.5.2"
